[package]
name = "cargo-tangle"
version = "0.4.0-alpha.16"
description = "A command-line tool to create and deploy blueprints on Tangle Network"
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive", "wrap_help"] }
clap-cargo = { workspace = true, features = ["clap"] }
cargo-generate = { workspace = true, features = ["vendored-libgit2"] }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt", "ansi"] }
color-eyre = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["alloc", "preserve_order"] }
tokio = { workspace = true, features = ["full"] }
hex = { workspace = true }
tracing = { workspace = true, features = ["log"] }
thiserror = { workspace = true }
bip39 = { workspace = true, features = ["rand_core", "rand"] }
dotenv = { workspace = true }
url = { workspace = true }
toml = { workspace = true }
indicatif = { workspace = true }
blueprint-core = { workspace = true, features = ["tracing"] }
blueprint-runner = { workspace = true, features = ["networking", "tangle", "eigenlayer"] }
blueprint-std = { workspace = true, features = ["std"] }
blueprint-tangle-extra = { workspace = true, features = ["std"] }
blueprint-chain-setup = { workspace = true, features = ["tangle", "anvil", "std"] }
blueprint-testing-utils = { workspace = true, features = ["tangle", "anvil", "eigenlayer"] }
blueprint-contexts = { workspace = true }
tnt-core-bytecode = { workspace = true }
blueprint-manager = { workspace = true }
dialoguer = { workspace = true, default-features = true }
blueprint-clients = { workspace = true, features = ["tangle", "eigenlayer", "evm", "std"] }
blueprint-crypto = { workspace = true, features = [
    "k256",
    "sr25519-schnorrkel",
    "ed25519",
    "bls",
    "bn254",
    "sp-core",
    "sp-core-bls",
    "tangle-pair-signer",
] }
blueprint-crypto-core = { workspace = true, features = ["clap"] }
blueprint-keystore = { workspace = true, features = ["tangle-full", "eigenlayer-full", "evm", "std"] }
tangle-subxt = { workspace = true }
sp-core = { workspace = true }
eigensdk = { workspace = true }
blueprint-evm-extra = { workspace = true }
testcontainers = { workspace = true }
tempfile = { workspace = true }
alloy-json-abi = { workspace = true, features = ["serde_json"] }
alloy-network = { workspace = true }
alloy-signer-local = { workspace = true }
alloy-primitives = { workspace = true }
alloy-contract = { workspace = true }
alloy-provider = { workspace = true }
alloy-transport = { workspace = true }
alloy-rpc-types-eth = { workspace = true }

[dev-dependencies]
blueprint-keystore = { workspace = true, features = ["bn254"] }
tempfile = { workspace = true }
blueprint-testing-utils = { workspace = true, features = ["anvil", "eigenlayer", "tangle"] }
alloy-contract = { workspace = true }
alloy-dyn-abi = { workspace = true }
