[package]
name = "blueprint-contract-deployer"
version = "0.1.0"
description = "A library that contains Rust bindings for contracts and tools for deploying contracts"
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["alloc"] }
alloy-sol-types = { workspace = true }
alloy-json-abi = { workspace = true, features = ["serde_json"] }
alloy-contract = { workspace = true }
