[package]
name = "blueprint-contract-deployer"
version = "0.1.0"
description = "A library that contains Rust bindings for contracts and tools for deploying contracts"
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
color-eyre = { workspace = true }
eigensdk = { workspace = true, features = ["crypto-bls"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["alloc"] }
alloy = { workspace = true }
alloy-sol-types = { workspace = true, features = ["json"] }
alloy-json-abi = { workspace = true, features = ["serde_json"] }
alloy-contract = { workspace = true }
alloy-provider = { workspace = true }
blueprint-sdk = { workspace = true, features = ["eigenlayer", "evm", "macros", "std", "testing"] }
alloy-primitives = { workspace = true }

[build-dependencies]
blueprint-build-utils = { workspace = true }
