[package]
name = "blueprint-benchmarking"
version = "0.1.0-alpha.2"
description = "Utilities for benchmarking Tangle Blueprints"
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
blueprint-std = { workspace = true }
sysinfo = { workspace = true, optional = true, features = ["system"] }
tokio = { workspace = true, features = ["sync", "time"] }
workspace-hack = { version = "0.1", path = "../../workspace-hack" }

[features]
default = ["std"]
std = ["dep:sysinfo", "blueprint-std/std", "tokio/full"]
