[package]
name = "blueprint-faas"
version = "0.2.0-alpha.2"
description = "FaaS provider integrations for Blueprint SDK"
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
# Core dependencies
blueprint-core.workspace = true

async-trait.workspace = true
bytes.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_bytes = { workspace = true, features = ["alloc"] }
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
futures.workspace = true

# HTTP client for custom FaaS
reqwest = { workspace = true, features = ["json"], optional = true }

# For creating Lambda deployment packages and DigitalOcean binary encoding
zip = { workspace = true }
base64 = { workspace = true, optional = true }

# AWS SDK
aws-config = { workspace = true, optional = true }
aws-sdk-lambda = { workspace = true, optional = true }
aws-smithy-types = { workspace = true, optional = true }

# GCP SDK
gcp_auth = { workspace = true, optional = true }

# Azure SDK
azure_core = { workspace = true, optional = true }
azure_identity = { workspace = true, optional = true }
workspace-hack = { version = "0.1", path = "../../workspace-hack" }

[dev-dependencies]
serial_test.workspace = true
tokio = { workspace = true, features = ["full", "test-util"] }
warp = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true, features = ["serde", "clock"] }
reqwest = { workspace = true, features = ["blocking"] }

[features]
default = ["std"]
std = ["serde_json/std"]
aws = ["dep:aws-config", "dep:aws-sdk-lambda", "dep:aws-smithy-types"]
gcp = ["dep:gcp_auth", "dep:reqwest"]
azure = ["dep:azure_core", "dep:azure_identity", "dep:reqwest"]
custom = ["dep:reqwest"]
digitalocean = ["dep:reqwest", "dep:base64"]
all = ["aws", "gcp", "azure", "custom", "digitalocean"]

[lints]
workspace = true
