[package]
name = "blueprint-profiling"
version = "0.1.0"
edition = "2021"
authors.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["std"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
chrono = { workspace = true, features = ["std", "clock"] }
flate2 = { workspace = true }
base64 = { workspace = true, features = ["std"] }

# Unix-specific for memory profiling
[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
rand = { workspace = true, features = ["std", "std_rng"] }

[lints]
workspace = true
