[package]
name = "blueprint-profiling"
version = "0.2.0-alpha.2"
description = "Profiling utilities for Tangle Blueprints"
edition = "2021"
authors.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["std"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
chrono = { workspace = true, features = ["std", "clock"] }
flate2 = { workspace = true }
base64 = { workspace = true, features = ["std"] }
workspace-hack = { version = "0.1", path = "../../workspace-hack" }

# Unix-specific for memory profiling
[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
rand = { workspace = true, features = ["std", "std_rng"] }

[lints]
workspace = true
