[package]
name = "blueprint-remote-providers"
version = "0.2.0-alpha.1"
description = "Remote service providers for Tangle Blueprints"
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
documentation = "https://docs.rs/blueprint-remote-providers"

[dependencies]
# Blueprint standard library
blueprint-std.workspace = true
base64 = { workspace = true }

# Core dependencies
anyhow.workspace = true
async-trait = { workspace = true }
auto_impl = { workspace = true }
chrono = { workspace = true, features = ["serde", "clock"] }
futures.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_yaml = { workspace = true }
shell-escape = { workspace = true }
aes-gcm = { workspace = true }
blake3 = { workspace = true }
hex = { workspace = true }
zeroize = { workspace = true, features = ["derive"] }
url = { workspace = true }
jsonwebtoken = { workspace = true }
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
toml = { workspace = true }
blueprint-core = { workspace = true, features = ["tracing"] }

# Blueprint dependencies (removed blueprint-manager and blueprint-qos to avoid cyclic dependency)
# blueprint-auth.workspace = true
blueprint-keystore = { workspace = true, default-features = false, features = ["std"] }
blueprint-pricing-engine.workspace = true

# Provider-specific dependencies
bollard = { workspace = true, optional = true }
# Pinned: root workspace has kube 1.1 / k8s-openapi 0.25, this crate requires 0.90 / 0.21 API
kube = { version = "0.90", features = ["rustls-tls"], optional = true }
k8s-openapi = { version = "0.21", features = ["v1_29"], optional = true }

# AWS SDK
aws-config = { workspace = true, optional = true, features = ["default-https-client", "rt-tokio"] }
aws-sdk-ec2 = { workspace = true, optional = true }
aws-sdk-eks = { workspace = true, optional = true }
aws-sdk-autoscaling = { workspace = true, optional = true }
aws-sdk-cloudwatchlogs = { workspace = true, optional = true }

# HTTP client for cloud APIs and pricing
reqwest = { workspace = true, features = ["json", "rustls-tls", "gzip", "deflate"] }
rustls = { workspace = true, features = ["aws_lc_rs"] }

# TLS and secure communication
tokio-rustls = { workspace = true }
aws-lc-rs = { workspace = true }
chacha20poly1305 = { workspace = true }

# Utilities
uuid = { workspace = true, features = ["v4", "serde"] }
libc = { workspace = true }
rand = { workspace = true }
urlencoding = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
tempfile.workspace = true
tokio-test = { workspace = true }
wiremock = { workspace = true }
serial_test.workspace = true
proptest = { workspace = true }
mockito = { workspace = true }
# Official AWS mocking library
aws-smithy-mocks-experimental = { workspace = true }
aws-smithy-runtime = { workspace = true, features = ["test-util"] }
aws-smithy-types = { workspace = true }
http = { workspace = true }
# Additional dependencies for integration tests
chrono = { workspace = true, features = ["serde", "clock"] }
rand = { workspace = true }
tracing-subscriber.workspace = true
# For regex in wiremock matchers
regex = { workspace = true }
# For container-based testing
testcontainers = { workspace = true }
# Pinned: matches pinned kube/k8s-openapi versions above
kube = { version = "0.90", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.21", features = ["v1_29"] }

[features]
default = ["std", "aws"]
std = [
    "blueprint-std/std",
    "blueprint-core/std",
    "blueprint-keystore/std",
    "blueprint-pricing-engine/std",
]
aws = ["dep:aws-config", "dep:aws-sdk-ec2", "dep:aws-sdk-autoscaling", "dep:aws-sdk-cloudwatchlogs"]
aws-eks = ["aws", "dep:aws-sdk-eks"]
gcp = []  # GCP support via REST API
azure = []  # Azure support via REST API
digitalocean = []  # DigitalOcean support via REST API
vultr = []  # Vultr support via REST API
kubernetes = ["dep:kube", "dep:k8s-openapi"]
docker = ["dep:bollard"]
testing = []


[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
[lints]
workspace = true
