[package]
name = "blueprint-build-utils"
version = "0.1.0-alpha.1"
description = "Tangle Blueprint build utils"
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
blueprint-std = { workspace = true, features = ["std"] }
