[package]
name = "blueprint-chain-setup"
version = "0.1.0-alpha.11"
description = "Chain setup utilities for use with Blueprint SDK"
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
blueprint-chain-setup-tangle = { workspace = true, optional = true }
blueprint-chain-setup-anvil = { workspace = true, optional = true }
blueprint-chain-setup-common = { workspace = true }

[features]
default = ["std"]
std = [
    "blueprint-chain-setup-common/std",
    "blueprint-chain-setup-tangle?/std",
    "blueprint-chain-setup-anvil?/std",
]
tangle = ["blueprint-chain-setup-tangle"]
anvil = ["blueprint-chain-setup-anvil"]
