[package]
name = "blueprint-chain-setup"
version = "0.1.0-alpha.21"
description = "Chain setup utilities for use with Blueprint SDK"
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
blueprint-chain-setup-anvil = { workspace = true, optional = true }

[features]
default = ["std"]
std = [
    "blueprint-chain-setup-anvil?/std",
]
anvil = ["blueprint-chain-setup-anvil"]
