[package]
name = "blueprint-clients"
version = "0.1.0-alpha.5"
description = "Metapackage for Tangle Blueprint clients"
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
blueprint-client-eigenlayer = { workspace = true, optional = true }
blueprint-client-evm = { workspace = true, optional = true }
blueprint-client-tangle = { workspace = true, optional = true }
blueprint-client-core = { workspace = true }
blueprint-std.workspace = true

thiserror.workspace = true

[features]
default = ["std"]
std = [
	"blueprint-client-eigenlayer?/std",
	"blueprint-client-evm?/std",
	"blueprint-client-tangle?/std",
	"blueprint-std/std",
	"thiserror/std",
]
web = ["blueprint-client-tangle?/web"]

eigenlayer = ["dep:blueprint-client-eigenlayer"]
evm = ["dep:blueprint-client-evm"]
tangle = ["dep:blueprint-client-tangle"]
