[package]
name = "gadget-contexts"
version = "0.1.0"
description = "Context providers for Tangle Blueprints"
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
blueprint-runner = { workspace = true }
gadget-std = { workspace = true }
blueprint-clients = { workspace = true }
gadget-networking = { workspace = true, optional = true }
gadget-keystore = { workspace = true, optional = true }

proc-macro2 = { workspace = true, optional = true }

tangle-subxt = { workspace = true, optional = true }

[features]
default = ["std", "keystore"]
std = ["blueprint-runner/std", "gadget-std/std", "blueprint-clients/std", "gadget-keystore?/std", "gadget-networking?/std", "tangle-subxt?/std"]
web = ["tangle-subxt?/web"]

evm = ["blueprint-clients/evm"]
eigenlayer = ["blueprint-clients/eigenlayer"]
networking = ["dep:gadget-networking", "dep:proc-macro2"]
keystore = ["dep:gadget-keystore"]
tangle = ["dep:tangle-subxt", "blueprint-clients/tangle"]
