[package]
name = "blueprint-contexts"
version = "0.1.0-alpha.4"
description = "Context providers for Tangle Blueprints"
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
blueprint-runner = { workspace = true }
blueprint-std = { workspace = true }
blueprint-clients = { workspace = true }
blueprint-networking = { workspace = true, optional = true }
blueprint-keystore = { workspace = true, optional = true }

proc-macro2 = { workspace = true, optional = true }

tangle-subxt = { workspace = true, optional = true }

[features]
default = ["std", "keystore"]
std = ["blueprint-runner/std", "blueprint-std/std", "blueprint-clients/std", "blueprint-keystore?/std", "blueprint-networking?/std", "tangle-subxt?/std"]
web = ["tangle-subxt?/web"]

evm = ["blueprint-clients/evm"]
eigenlayer = ["blueprint-clients/eigenlayer"]
networking = ["dep:blueprint-networking", "dep:proc-macro2"]
keystore = ["dep:blueprint-keystore"]
tangle = ["dep:tangle-subxt", "blueprint-clients/tangle"]
