[package]
name = "blueprint-contexts"
version = "0.1.0-alpha.21"
description = "Context providers for Tangle Blueprints"
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
blueprint-runner = { workspace = true }
blueprint-std = { workspace = true }
blueprint-clients = { workspace = true }
blueprint-networking = { workspace = true, optional = true }
blueprint-keystore = { workspace = true, optional = true }

proc-macro2 = { workspace = true, optional = true }

blueprint-client-tangle = { path = "../clients/tangle", optional = true }

[features]
default = ["std", "keystore"]
std = ["blueprint-runner/std", "blueprint-std/std", "blueprint-clients/std", "blueprint-keystore?/std", "blueprint-networking?/std", "blueprint-client-tangle?/std"]

evm = ["blueprint-clients/evm"]
eigenlayer = ["blueprint-clients/eigenlayer"]
networking = ["dep:blueprint-networking", "dep:proc-macro2"]
keystore = ["dep:blueprint-keystore"]
tangle = ["dep:blueprint-client-tangle", "blueprint-runner/tangle", "keystore"]
