[package]
name = "blueprint-core"
version = "0.1.0-alpha.3"
description = "Blueprint SDK Core functionality"
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
bytes.workspace = true
futures-util.workspace = true
pin-project-lite.workspace = true
tower = { workspace = true, features = ["util"] }
hashbrown = { workspace = true, default-features = false, features = ["default-hasher", "inline-more"] }
tiny-keccak = { workspace = true, features = ["keccak"] }
tracing = { workspace = true }

[dev-dependencies]
blueprint-sdk = { path = "../sdk", features = ["std"] }
serde_json = { workspace = true, features = ["alloc"] }
tower = { workspace = true, features = ["util", "timeout", "limit", "load-shed", "steer", "filter"] }
tokio = { workspace = true, features = ["full"] }

[features]
default = ["std", "tracing"]
std = ["futures-util/std"]
tracing = []
