[package]
name = "blueprint-crypto"
version = "0.1.0-alpha.1"
description = "Crypto metapackage for Tangle Blueprints"
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
blueprint-crypto-core = { workspace = true }
blueprint-crypto-k256 = { workspace = true, optional = true }
blueprint-crypto-sr25519 = { workspace = true, optional = true }
blueprint-crypto-ed25519 = { workspace = true, optional = true }
blueprint-crypto-hashing = { workspace = true, optional = true }
blueprint-crypto-bls = { workspace = true, optional = true }
blueprint-crypto-bn254 = { workspace = true, optional = true }
blueprint-crypto-sp-core = { workspace = true, optional = true }
blueprint-crypto-tangle-pair-signer = { workspace = true, optional = true }
thiserror = { workspace = true }

[features]
default = [
	"std",
	"k256",
	"sr25519-schnorrkel",
	"ed25519",
	"bls",
	"bn254",
	"sp-core",
	"tangle-pair-signer",
	"evm",
	"hashing"
]
std = [
	"blueprint-crypto-core/std",
	"blueprint-crypto-k256?/std",
	"blueprint-crypto-sr25519?/std",
	"blueprint-crypto-ed25519?/std",
	"blueprint-crypto-bls?/std",
	"blueprint-crypto-bn254?/std",
	"blueprint-crypto-sp-core?/std",
	"blueprint-crypto-tangle-pair-signer?/std",
]
web = [
	"blueprint-crypto-tangle-pair-signer?/web"
]

k256 = ["dep:blueprint-crypto-k256", "blueprint-crypto-core/k256"]
sr25519-schnorrkel = ["dep:blueprint-crypto-sr25519", "blueprint-crypto-core/sr25519-schnorrkel"]
ed25519 = ["dep:blueprint-crypto-ed25519", "blueprint-crypto-core/zebra"]
bls = ["dep:blueprint-crypto-bls", "blueprint-crypto-core/bls"]
bn254 = ["dep:blueprint-crypto-bn254", "blueprint-crypto-core/bn254"]
sp-core = ["dep:blueprint-crypto-sp-core", "blueprint-crypto-core/tangle"]
sp-core-bls = ["blueprint-crypto-sp-core/bls", "blueprint-crypto-core/tangle"]
tangle-pair-signer = ["dep:blueprint-crypto-tangle-pair-signer"]
evm = [
	"blueprint-crypto-tangle-pair-signer?/evm"
]

hashing = [
	"blueprint-crypto-hashing/sha2-hasher",
	"blueprint-crypto-hashing/sha3-hasher",
	"blueprint-crypto-hashing/blake3-hasher"
]
